@@ -363,7 +363,7 @@ extern __inline__ void remove_ztemp (void);
 extern __inline__ char *get_ztemp (void);
 
 /* straycats.c */
-extern int straycats (char *mandir);
+extern int straycats (const char *manpath);
 
 /* lexgrog.l */
 struct lexgrog;
