@@ -1,3 +1,10 @@
+  Colin Watson  <cjwatson@debian.org>
+
+	* src/mandb.c (process_manpath): New function, split out from main.
+	  (main): Use it. Move man_owner, purged, and strays to file scope.
+	* src/straycats.c (straycats): Constify manpath argument.
+	* include/manconfig.h.in (straycats): Update prototype.
+
 Sat May 26 10:58:11 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* src/man.c (gripe_no_name): On reflection, borrowing the error
